--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
-[package]
-name = "ffizz-passby"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-
-[dev-dependencies]
-uuid = { version = "^1.1.2", features = ["v4"] }
+members = [ 
+    "passby",
+]
