--- a/passby/Cargo.toml
+++ b/passby/Cargo.toml
@@ -12,3 +12,6 @@ edition = "2021"
 
 [dev-dependencies]
 uuid = { version = "^1.1.2", features = ["v4"] }
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
