Finish moving examples to examples

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,3 +37,6 @@ jobs:
 
       - name: run status example
         run: cargo run --example status
+
+      - name: run uuid example
+        run: cargo run --example uuid
