add OpaqueStruct trait

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,3 +40,6 @@ jobs:
 
       - name: run uuid example
         run: cargo run --example uuid
+
+      - name: run bytebuf example
+        run: cargo run --example bytebuf
