--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -14,4 +14,5 @@ proc-macro = true
 itertools = "0.10"
 quote = "1.0.21"
 proc-macro2 = "1.0.43"
-syn = { version = "1.0.99", features=["full"] }
+# TODO: remove extra-traits
+syn = { version = "1.0.99", features=["full", "extra-traits"] }
