use stable toolchain for clippy

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -29,9 +29,7 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
-          # Fixed version for clippy lints.  Bump this as necesary.  It must not
-          # be older than the MSRV in tests.yml.
-          toolchain: "1.57"
+          toolchain: stable
           override: true
 
       - uses: actions-rs/cargo@v1.0.1
