--- a/header/Cargo.toml
+++ b/header/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 [dependencies]
 linkme = "0.3.3"
 itertools = "0.10"
-ffizz-macros = { path = "../macros" }
+ffizz-macros = { version = "0.3.0", path = "../macros" }
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
