--- a/string/Cargo.toml
+++ b/string/Cargo.toml
@@ -10,11 +10,11 @@ edition = "2021"
 
 [dependencies]
 ffizz-passby = { version = "0.3.0", path = "../passby" }
+ffizz-header = { version = "0.3.0", path = "../header" }
 libc = "0.2.131"
 
 [dev-dependencies]
 uuid = { version = "^1.1.2", features = ["v4"] }
-ffizz-header = { path = "../header" }
 libc = "0.2.129"
 
 [package.metadata.docs.rs]
