--- a/tests/simplib/Cargo.toml
+++ b/tests/simplib/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 publish = false
 
 [lib]
-crate-type = ["staticlib", "rlib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 ffizz-header = { path = "../../header" }
