--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-itertools = "0.10"
-quote = "1.0.21"
-proc-macro2 = "1.0.43"
-syn = { version = "1.0.99", features=["full", "extra-traits"] }
+# all non-ffizz dependencies should be specified in the workspace
+itertools = { workspace = true }
+quote = { workspace = true }
+proc-macro2 = { workspace = true }
+syn = { workspace = true }
