--- a/passby/Cargo.toml
+++ b/passby/Cargo.toml
@@ -11,8 +11,9 @@ edition = "2021"
 [dependencies]
 
 [dev-dependencies]
-uuid = { version = "^1.1.2", features = ["v4"] }
-libc = "0.2.129"
+# all non-ffizz dependencies should be specified in the workspace
+uuid = { workspace = true }
+libc = { workspace = true }
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
