--- a/string/Cargo.toml
+++ b/string/Cargo.toml
@@ -21,3 +21,6 @@ uuid = { workspace = true }
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 
+[[example]]
+name = "kv"
+doc-scrape-examples = true
